--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=9000
 NODE_ENV='development'
 GOOGLE_APPLICATION_CREDENTIALS=serviceaccount.json
-MODEL_URL='https://storage.googleapis.com/recyscan/model.json'
+MODEL_URL='https://your-data-model-in-cloud-storage-bucket/model.json'
